# skeleton

./: .coveragerc  .flake8  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg  test_cli.py
db/: env.py
db/test/: env.py
db/test/versions/: 1_create_tables.py  2_populate_configs.py
db/versions/: 1_create_config_db.py  2_populate_configs.py  67ef9cbe1976_populate_configs.py  9d5bca9a7d3e_create_config_db.py
json/configs/: foobar.json
json/test_configs/: test.json
skeleton/: __init__.py  cli.py  console.py  database.py  models.py
skeleton/configs/: __init__.py  commands.py  console.py  crud.py  models.py  schemas.py
tests/: test_cli.py  test_init.py
