[metadata]
name = skeleton
version = attr: skeleton.__version__
description = Python App Skeleton
long_description = file: README.md
long_description_content_type = "text/markdown"
keywords = skeleton

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    certifi
    click
    python-dateutil
    six>=1.10
    sqlmodel
    urllib3>=1.15

[options.entry_points]
console_scripts =
    skeleton = skeleton.cli:run
